--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "workbench.editorAssociations": {   
       "*.md": "vscode.markdown.preview.editor"
   },
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5502,
+  "todohighlight.isEnable":true
 }
